complete prun&TFLite pipeline

--- a/all_pipeline.ipynb
+++ b/all_pipeline.ipynb
@@ -48,7 +48,7 @@
     "    description='mnist '\n",
     ")\n",
     "\n",
-    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3, model_version4, model_version5, model_version6):\n",
+    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3, model_version4, model_version5, model_version6, model_version7):\n",
     "    \n",
     "    exit_task = echo_op(\"Done!\")\n",
     "    \n",
@@ -76,7 +76,7 @@
     "            ],\n",
     "            pvolumes={\"/result\": fmnist_vop.volume}\n",
     "        )\n",
-    "        \n",
+    "        ################################# basic compression file ###########################\n",
     "        #prun com\n",
     "        prun = dsl.ContainerOp(\n",
     "            name='prun',\n",
@@ -146,6 +146,24 @@
     "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
     "            pvolumes={\"/result\": mnist.pvolume}\n",
     "        )\n",
+    "        ####################################################################################\n",
+    "        \n",
+    "        ######################### combination code ##########################################\n",
+    "        #prun tflite com\n",
+    "        prun_tflite = dsl.ContainerOp(\n",
+    "            name='prun_tflite',\n",
+    "            image='khw2126/prun_tflite:0.0.2',\n",
+    "            command=['python', '/app/pruning_tflite.py'],\n",
+    "            arguments=[\n",
+    "                \"--model_path\", model_path,\n",
+    "                \"--model_version2\", model_version2,\n",
+    "                \"--model_version7\", model_version7,\n",
+    "            ],\n",
+    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
+    "            pvolumes={\"/result\": prun.pvolume}\n",
+    "        )\n",
+    "        \n",
+    "        ####################################################################################3\n",
     "        \n",
     "        #result com\n",
     "        result = dsl.ContainerOp(\n",
@@ -163,13 +181,15 @@
     "        integer_quant.after(mnist)\n",
     "        float16_quant.after(mnist)\n",
     "        \n",
+    "        prun_tflite.after(prun)\n",
+    "        \n",
     "        result.after(prun)\n",
     "        result.after(quan_aware)\n",
     "        result.after(dynamic_quan)\n",
     "        result.after(integer_quant)\n",
     "        result.after(float16_quant)\n",
+    "        result.after(prun_tflite)\n",
     "        \n",
-    "\n",
     "    \n",
     "if __name__ == '__main__':\n",
     "    #argument !![model_path, model_version]\n",
@@ -182,7 +202,8 @@
     "                 'model_version3': '/quan_aware_model.h5',\n",
     "                 'model_version4': '/dynamic_post_quan_tflite_file.tflite',\n",
     "                 'model_version5': '/integer_post_quan_tflite_file.tflite',\n",
-    "                 'model_version6': '/fp16_post_quan_tflite_file.tflite'\n",
+    "                 'model_version6': '/fp16_post_quan_tflite_file.tflite',\n",
+    "                 'model_version7': '/weightpruning_tflite_file.tflite'\n",
     "                }\n",
     "    kfp.Client().create_run_from_pipeline_func(pipeline_func=fmnist_pipeline, arguments=arguments)"
    ]
