quantization tflite add

--- a/prun_tflite_pipe.ipynb
+++ b/prun_tflite_pipe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/b2660133-1ba9-425a-9e22-45a00ab6a6a1\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/682dfeed-f856-4a25-916d-39c52906eb88\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -48,7 +48,7 @@
     "    description='mnist '\n",
     ")\n",
     "\n",
-    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2):\n",
+    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3):\n",
     "    \n",
     "    exit_task = echo_op(\"Done!\")\n",
     "    \n",
@@ -77,11 +77,11 @@
     "            pvolumes={\"/result\": fmnist_vop.volume}\n",
     "        )\n",
     "        \n",
-    "        #integer_quan\n",
-    "        integer_quant = dsl.ContainerOp(\n",
-    "            name='integer_quant',\n",
-    "            image='khw2126/integer_quant:0.0.4',\n",
-    "            command=['python', '/app/integer_quant.py'],\n",
+    "        #prun com\n",
+    "        prun = dsl.ContainerOp(\n",
+    "            name='prun',\n",
+    "            image='khw2126/prun:0.0.12',\n",
+    "            command=['python', '/app/pruning_code.py'],\n",
     "            arguments=[\n",
     "                \"--model_path\", model_path,\n",
     "                \"--model_version\", model_version,\n",
@@ -89,6 +89,20 @@
     "            ],\n",
     "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
     "            pvolumes={\"/result\": mnist.pvolume}\n",
+    "        )\n",
+    "        \n",
+    "        #prun tflite com\n",
+    "        prun_tflite = dsl.ContainerOp(\n",
+    "            name='prun_tflite',\n",
+    "            image='khw2126/prun_tflite:0.0.2',\n",
+    "            command=['python', '/app/pruning_tflite.py'],\n",
+    "            arguments=[\n",
+    "                \"--model_path\", model_path,\n",
+    "                \"--model_version2\", model_version2,\n",
+    "                \"--model_version3\", model_version3,\n",
+    "            ],\n",
+    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
+    "            pvolumes={\"/result\": prun.pvolume}\n",
     "        )\n",
     "        \n",
     "        #result com\n",
@@ -101,9 +115,9 @@
     "        )\n",
     "        \n",
     "        #order\n",
-    "        integer_quant.after(mnist)\n",
-    "\n",
-    "        result.after(integer_quant)\n",
+    "        prun.after(mnist)\n",
+    "        prun_tflite.after(prun)\n",
+    "        result.after(prun_tflite)\n",
     "\n",
     "    \n",
     "if __name__ == '__main__':\n",
@@ -113,7 +127,8 @@
     "                 'dropout_rate': '0.18',\n",
     "                 'model_path':'/result', #'/result/saved_model'\n",
     "                 'model_version': '/base_model.h5',#/Base_model.h5\n",
-    "                 'model_version2': '/integer_post_quan_tflite_file.tflite'\n",
+    "                 'model_version2': '/prun_model.h5',\n",
+    "                 'model_version3': '/weightpruning_tflite_file.tflite'\n",
     "                }\n",
     "    kfp.Client().create_run_from_pipeline_func(pipeline_func=fmnist_pipeline, arguments=arguments)"
    ]
