--- a/quan_aware_tflite_pipe.ipynb
+++ b/quan_aware_tflite_pipe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/b2660133-1ba9-425a-9e22-45a00ab6a6a1\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/9bbf0178-975e-424e-a315-433778059125\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -48,7 +48,7 @@
     "    description='mnist '\n",
     ")\n",
     "\n",
-    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2):\n",
+    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version3, model_version8):\n",
     "    \n",
     "    exit_task = echo_op(\"Done!\")\n",
     "    \n",
@@ -77,15 +77,16 @@
     "            pvolumes={\"/result\": fmnist_vop.volume}\n",
     "        )\n",
     "        \n",
-    "        #integer_quan\n",
-    "        integer_quant = dsl.ContainerOp(\n",
-    "            name='integer_quant',\n",
-    "            image='khw2126/integer_quant:0.0.4',\n",
-    "            command=['python', '/app/integer_quant.py'],\n",
+    "        #quant_aware_tflite com\n",
+    "        quant_aware_tflite = dsl.ContainerOp(\n",
+    "            name='quant_aware_tflite',\n",
+    "            image='khw2126/quant_aware_tflite:0.0.4',\n",
+    "            command=['python', '/app/quantization_aware_tflite.py'],\n",
     "            arguments=[\n",
     "                \"--model_path\", model_path,\n",
     "                \"--model_version\", model_version,\n",
-    "                \"--model_version2\", model_version2,\n",
+    "                \"--model_version3\", model_version3,\n",
+    "                \"--model_version8\", model_version8,\n",
     "            ],\n",
     "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
     "            pvolumes={\"/result\": mnist.pvolume}\n",
@@ -101,9 +102,8 @@
     "        )\n",
     "        \n",
     "        #order\n",
-    "        integer_quant.after(mnist)\n",
-    "\n",
-    "        result.after(integer_quant)\n",
+    "        quant_aware_tflite.after(mnist)\n",
+    "        result.after(quant_aware_tflite)\n",
     "\n",
     "    \n",
     "if __name__ == '__main__':\n",
@@ -113,7 +113,8 @@
     "                 'dropout_rate': '0.18',\n",
     "                 'model_path':'/result', #'/result/saved_model'\n",
     "                 'model_version': '/base_model.h5',#/Base_model.h5\n",
-    "                 'model_version2': '/integer_post_quan_tflite_file.tflite'\n",
+    "                 'model_version3': '/quan_model.h5',\n",
+    "                 'model_version8': '/qaware_dynamic_post_quan_tflite_file.tflite'\n",
     "                }\n",
     "    kfp.Client().create_run_from_pipeline_func(pipeline_func=fmnist_pipeline, arguments=arguments)"
    ]
