--- a/compression_code/Quantization_aware_code.ipynb
+++ b/compression_code/Quantization_aware_code.ipynb
@@ -26,14 +26,14 @@
     "parser.add_argument('--dropout_rate', required=False, type=float, default=0.3)  \n",
     "parser.add_argument('--model_path', required=False, default='/result/saved_model',type = str)  \n",
     "parser.add_argument('--model_version', required=False, default='1',type = str)\n",
-    "parser.add_argument('--model_version2', required=False, default='1',type = str)\n",
     "parser.add_argument('--model_version3', required=False, default='1',type = str)\n",
+    "parser.add_argument('--model_version8', required=False, default='1',type = str)\n",
     "args = parser.parse_args()   \n",
     "\n",
     "\n",
     "# 모델 사이즈를 측정하기 위한 함수\n",
     "def get_gzipped_model_size(file):\n",
-    "    _, zipped_file = tempfile.mkstemp('.zip',dir=args.model_path)\n",
+    "    _, zipped_file = tempfile.mkstemp('.zip')#,dir=args.model_path\n",
     "    with zipfile.ZipFile(zipped_file, 'w', compression=zipfile.ZIP_DEFLATED) as f:\n",
     "        f.write(file)\n",
     "        \n",
@@ -86,8 +86,7 @@
     "print(\"Quant test accuracy: \", q_aware_model_accuracy)\n",
     "\n",
     "tf.keras.models.save_model(q_aware_model, args.model_path+args.model_version3, include_optimizer=False)\n",
-    "print(\"test size: \",os.path.getsize(args.model_path+args.model_version3))\n",
-    "print(\"Quant model size: \",get_gzipped_model_size(args.model_path+args.model_version3))\n"
+    "print(\"Quant model size: \",get_gzipped_model_size(args.model_path+args.model_version3))"
    ]
   }
  ],
