prun and qunatization aware pipeline finish

--- a/all_pipeline.ipynb
+++ b/all_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/32e960d8-e602-4a4f-b5b8-65c0ae624829\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/efd80e30-0ce0-449c-9b38-e943b51f7539\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -48,7 +48,7 @@
     "    description='mnist '\n",
     ")\n",
     "\n",
-    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3, model_version4, model_version5, model_version6, model_version7):\n",
+    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3, model_version4, model_version5, model_version6, model_version7, model_version8):\n",
     "    \n",
     "    exit_task = echo_op(\"Done!\")\n",
     "    \n",
@@ -163,6 +163,34 @@
     "            pvolumes={\"/result\": prun.pvolume}\n",
     "        )\n",
     "        \n",
+    "        #quant_aware_tflite com\n",
+    "        quant_aware_dynamic_quan = dsl.ContainerOp(\n",
+    "            name='quant_aware_dynamic_quan',\n",
+    "            image='khw2126/quant_aware_tflite:0.0.5',\n",
+    "            command=['python', '/app/quantization_aware_tflite.py'],\n",
+    "            arguments=[\n",
+    "                \"--model_path\", model_path,\n",
+    "                \"--model_version\", model_version,\n",
+    "                \"--model_version3\", model_version3,\n",
+    "                \"--model_version8\", model_version8,\n",
+    "            ],\n",
+    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
+    "            pvolumes={\"/result\": mnist.pvolume}\n",
+    "        )\n",
+    "        \n",
+    "        #prun and quan-aware com\n",
+    "        prun_quan_aware = dsl.ContainerOp(\n",
+    "            name='prun_quan_aware',\n",
+    "            image='khw2126/quan:0.0.9',\n",
+    "            command=['python', '/app/quantization_aware_code.py'],\n",
+    "            arguments=[\n",
+    "                \"--model_path\", model_path,\n",
+    "                \"--model_version\", model_version2,\n",
+    "                \"--model_version3\", model_version3,\n",
+    "            ],\n",
+    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
+    "            pvolumes={\"/result\": prun.pvolume}\n",
+    "        )\n",
     "        ####################################################################################3\n",
     "        \n",
     "        #result com\n",
@@ -182,13 +210,18 @@
     "        float16_quant.after(mnist)\n",
     "        \n",
     "        prun_tflite.after(prun)\n",
+    "        prun_quan_aware.after(prun)\n",
+    "        quant_aware_dynamic_quan.after(quan_aware)\n",
     "        \n",
     "        result.after(prun)\n",
     "        result.after(quan_aware)\n",
     "        result.after(dynamic_quan)\n",
     "        result.after(integer_quant)\n",
     "        result.after(float16_quant)\n",
+    "        \n",
     "        result.after(prun_tflite)\n",
+    "        result.after(quant_aware_dynamic_quan)\n",
+    "        result.after(prun_quan_aware)\n",
     "        \n",
     "    \n",
     "if __name__ == '__main__':\n",
@@ -203,7 +236,8 @@
     "                 'model_version4': '/dynamic_post_quan_tflite_file.tflite',\n",
     "                 'model_version5': '/integer_post_quan_tflite_file.tflite',\n",
     "                 'model_version6': '/fp16_post_quan_tflite_file.tflite',\n",
-    "                 'model_version7': '/weightpruning_tflite_file.tflite'\n",
+    "                 'model_version7': '/weightpruning_tflite_file.tflite',\n",
+    "                 'model_version8': '/qaware_dynamic_post_quan_tflite_file.tflite'\n",
     "                }\n",
     "    kfp.Client().create_run_from_pipeline_func(pipeline_func=fmnist_pipeline, arguments=arguments)"
    ]
