--- a/prun_quan_aware_pipe.ipynb
+++ b/prun_quan_aware_pipe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/264bd4bf-53a4-4096-ada6-058a98d6e265\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/6541114c-9486-460e-bf04-3e1400c50001\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -48,7 +48,7 @@
     "    description='mnist '\n",
     ")\n",
     "\n",
-    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version3, model_version8):\n",
+    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3):\n",
     "    \n",
     "    exit_task = echo_op(\"Done!\")\n",
     "    \n",
@@ -77,19 +77,32 @@
     "            pvolumes={\"/result\": fmnist_vop.volume}\n",
     "        )\n",
     "        \n",
-    "        #quant_aware_tflite com\n",
-    "        quant_aware_tflite = dsl.ContainerOp(\n",
-    "            name='quant_aware_tflite',\n",
-    "            image='khw2126/quant_aware_tflite:0.0.5',\n",
-    "            command=['python', '/app/quantization_aware_tflite.py'],\n",
+    "        #prun com\n",
+    "        prun = dsl.ContainerOp(\n",
+    "            name='prun',\n",
+    "            image='khw2126/prun:0.0.12',\n",
+    "            command=['python', '/app/pruning_code.py'],\n",
     "            arguments=[\n",
     "                \"--model_path\", model_path,\n",
     "                \"--model_version\", model_version,\n",
-    "                \"--model_version3\", model_version3,\n",
-    "                \"--model_version8\", model_version8,\n",
+    "                \"--model_version2\", model_version2,\n",
     "            ],\n",
     "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
     "            pvolumes={\"/result\": mnist.pvolume}\n",
+    "        )\n",
+    "        \n",
+    "        #quan com\n",
+    "        quan = dsl.ContainerOp(\n",
+    "            name='quan',\n",
+    "            image='khw2126/quan:0.0.9',\n",
+    "            command=['python', '/app/quantization_aware_code.py'],\n",
+    "            arguments=[\n",
+    "                \"--model_path\", model_path,\n",
+    "                \"--model_version\", model_version2,\n",
+    "                \"--model_version3\", model_version3\n",
+    "            ],\n",
+    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
+    "            pvolumes={\"/result\": prun.pvolume}\n",
     "        )\n",
     "        \n",
     "        #result com\n",
@@ -102,8 +115,9 @@
     "        )\n",
     "        \n",
     "        #order\n",
-    "        quant_aware_tflite.after(mnist)\n",
-    "        result.after(quant_aware_tflite)\n",
+    "        prun.after(mnist)\n",
+    "        quan.after(prun)\n",
+    "        result.after(quan)\n",
     "\n",
     "    \n",
     "if __name__ == '__main__':\n",
@@ -113,8 +127,8 @@
     "                 'dropout_rate': '0.18',\n",
     "                 'model_path':'/result', #'/result/saved_model'\n",
     "                 'model_version': '/base_model.h5',#/Base_model.h5\n",
-    "                 'model_version3': '/quan_model.h5',\n",
-    "                 'model_version8': '/qaware_dynamic_post_quan_tflite_file.tflite'\n",
+    "                 'model_version2': '/prun_model.h5',\n",
+    "                 'model_version3': '/quan_model.h5'\n",
     "                }\n",
     "    kfp.Client().create_run_from_pipeline_func(pipeline_func=fmnist_pipeline, arguments=arguments)"
    ]
