pruning dynamic qunatization pipeline finishi

--- a/all_pipeline.ipynb
+++ b/all_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/efd80e30-0ce0-449c-9b38-e943b51f7539\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/47f9fd1f-d22e-4bb1-8ccc-0132368c0332\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -163,7 +163,35 @@
     "            pvolumes={\"/result\": prun.pvolume}\n",
     "        )\n",
     "        \n",
-    "        #quant_aware_tflite com\n",
+    "        #prun and quan-aware com\n",
+    "        prun_quan_aware = dsl.ContainerOp(\n",
+    "            name='prun_quan_aware',\n",
+    "            image='khw2126/quan:0.0.9',\n",
+    "            command=['python', '/app/quantization_aware_code.py'],\n",
+    "            arguments=[\n",
+    "                \"--model_path\", model_path,\n",
+    "                \"--model_version\", model_version2,\n",
+    "                \"--model_version3\", model_version3,\n",
+    "            ],\n",
+    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
+    "            pvolumes={\"/result\": prun.pvolume}\n",
+    "        )\n",
+    "        \n",
+    "        #prun and dynamic quan com\n",
+    "        prun_dynamic_quan = dsl.ContainerOp(\n",
+    "            name='prun_dynamic_quan',\n",
+    "            image='khw2126/dynamic_quan:0.0.4',\n",
+    "            command=['python', '/app/dynamic_quant.py'],\n",
+    "            arguments=[\n",
+    "                \"--model_path\", model_path,\n",
+    "                \"--model_version\", model_version2,\n",
+    "                \"--model_version4\", model_version4,\n",
+    "            ],\n",
+    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
+    "            pvolumes={\"/result\": prun.pvolume}\n",
+    "        )\n",
+    "        \n",
+    "        #quant_aware_dynamic quan com\n",
     "        quant_aware_dynamic_quan = dsl.ContainerOp(\n",
     "            name='quant_aware_dynamic_quan',\n",
     "            image='khw2126/quant_aware_tflite:0.0.5',\n",
@@ -178,20 +206,8 @@
     "            pvolumes={\"/result\": mnist.pvolume}\n",
     "        )\n",
     "        \n",
-    "        #prun and quan-aware com\n",
-    "        prun_quan_aware = dsl.ContainerOp(\n",
-    "            name='prun_quan_aware',\n",
-    "            image='khw2126/quan:0.0.9',\n",
-    "            command=['python', '/app/quantization_aware_code.py'],\n",
-    "            arguments=[\n",
-    "                \"--model_path\", model_path,\n",
-    "                \"--model_version\", model_version2,\n",
-    "                \"--model_version3\", model_version3,\n",
-    "            ],\n",
-    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
-    "            pvolumes={\"/result\": prun.pvolume}\n",
-    "        )\n",
-    "        ####################################################################################3\n",
+    "        \n",
+    "        ####################################################################################\n",
     "        \n",
     "        #result com\n",
     "        result = dsl.ContainerOp(\n",
@@ -202,6 +218,7 @@
     "            pvolumes={\"/result\": mnist.pvolume}#prun.pvolume\n",
     "        )\n",
     "        \n",
+    "        ####################################################################################\n",
     "        #order\n",
     "        prun.after(mnist)\n",
     "        quan_aware.after(mnist)\n",
@@ -211,6 +228,7 @@
     "        \n",
     "        prun_tflite.after(prun)\n",
     "        prun_quan_aware.after(prun)\n",
+    "        prun_dynamic_quan.after(prun)\n",
     "        quant_aware_dynamic_quan.after(quan_aware)\n",
     "        \n",
     "        result.after(prun)\n",
@@ -220,8 +238,9 @@
     "        result.after(float16_quant)\n",
     "        \n",
     "        result.after(prun_tflite)\n",
-    "        result.after(quant_aware_dynamic_quan)\n",
     "        result.after(prun_quan_aware)\n",
+    "        result.after(prun_dynamic_quan)\n",
+    "        result.after(quant_aware_dynamic_quan)\n",
     "        \n",
     "    \n",
     "if __name__ == '__main__':\n",
