--- a/prun_dynamic_quan_pipe.ipynb
+++ b/prun_dynamic_quan_pipe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/6541114c-9486-460e-bf04-3e1400c50001\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/7ada5adc-6b1e-439b-80f3-052a8dd3f031\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -48,7 +48,7 @@
     "    description='mnist '\n",
     ")\n",
     "\n",
-    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version3):\n",
+    "def fmnist_pipeline(learning_rate, dropout_rate,model_path, model_version, model_version2, model_version4):\n",
     "    \n",
     "    exit_task = echo_op(\"Done!\")\n",
     "    \n",
@@ -91,18 +91,18 @@
     "            pvolumes={\"/result\": mnist.pvolume}\n",
     "        )\n",
     "        \n",
-    "        #quan com\n",
-    "        quan = dsl.ContainerOp(\n",
-    "            name='quan',\n",
-    "            image='khw2126/quan:0.0.9',\n",
-    "            command=['python', '/app/quantization_aware_code.py'],\n",
+    "        #dynamic quan\n",
+    "        dynamic_quan = dsl.ContainerOp(\n",
+    "            name='dynamic_quan',\n",
+    "            image='khw2126/dynamic_quan:0.0.4',\n",
+    "            command=['python', '/app/dynamic_quant.py'],\n",
     "            arguments=[\n",
     "                \"--model_path\", model_path,\n",
     "                \"--model_version\", model_version2,\n",
-    "                \"--model_version3\", model_version3\n",
+    "                \"--model_version4\", model_version4,\n",
     "            ],\n",
     "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
-    "            pvolumes={\"/result\": prun.pvolume}\n",
+    "            pvolumes={\"/result\": mnist.pvolume}\n",
     "        )\n",
     "        \n",
     "        #result com\n",
@@ -116,8 +116,8 @@
     "        \n",
     "        #order\n",
     "        prun.after(mnist)\n",
-    "        quan.after(prun)\n",
-    "        result.after(quan)\n",
+    "        dynamic_quan.after(prun)\n",
+    "        result.after(dynamic_quan)\n",
     "\n",
     "    \n",
     "if __name__ == '__main__':\n",
@@ -128,17 +128,10 @@
     "                 'model_path':'/result', #'/result/saved_model'\n",
     "                 'model_version': '/base_model.h5',#/Base_model.h5\n",
     "                 'model_version2': '/prun_model.h5',\n",
-    "                 'model_version3': '/quan_model.h5'\n",
+    "                 'model_version4': '/dynamic_post_quan_tflite_file.tflite'\n",
     "                }\n",
     "    kfp.Client().create_run_from_pipeline_func(pipeline_func=fmnist_pipeline, arguments=arguments)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
