pruning and integer qunatization pipeline finishi

--- a/all_pipeline.ipynb
+++ b/all_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/47f9fd1f-d22e-4bb1-8ccc-0132368c0332\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/02351a24-b838-40a1-bcf7-f9e3c4834399\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -206,7 +206,19 @@
     "            pvolumes={\"/result\": mnist.pvolume}\n",
     "        )\n",
     "        \n",
-    "        \n",
+    "        #prun and integer_quan\n",
+    "        prun_integer_quant = dsl.ContainerOp(\n",
+    "            name='prun_integer_quant',\n",
+    "            image='khw2126/integer_quant:0.0.4',\n",
+    "            command=['python', '/app/integer_quant.py'],\n",
+    "            arguments=[\n",
+    "                \"--model_path\", model_path,\n",
+    "                \"--model_version\", model_version2,\n",
+    "                \"--model_version5\", model_version5,\n",
+    "            ],\n",
+    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
+    "            pvolumes={\"/result\": prun.pvolume}\n",
+    "        )\n",
     "        ####################################################################################\n",
     "        \n",
     "        #result com\n",
@@ -230,6 +242,7 @@
     "        prun_quan_aware.after(prun)\n",
     "        prun_dynamic_quan.after(prun)\n",
     "        quant_aware_dynamic_quan.after(quan_aware)\n",
+    "        prun_integer_quant.after(prun)\n",
     "        \n",
     "        result.after(prun)\n",
     "        result.after(quan_aware)\n",
@@ -241,6 +254,7 @@
     "        result.after(prun_quan_aware)\n",
     "        result.after(prun_dynamic_quan)\n",
     "        result.after(quant_aware_dynamic_quan)\n",
+    "        result.after(prun_integer_quant)\n",
     "        \n",
     "    \n",
     "if __name__ == '__main__':\n",
