pruning and float16 quantization pipeline finish

--- a/all_pipeline.ipynb
+++ b/all_pipeline.ipynb
@@ -219,6 +219,20 @@
     "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
     "            pvolumes={\"/result\": prun.pvolume}\n",
     "        )\n",
+    "        \n",
+    "        #prun and float16_quan\n",
+    "        prun_float16_quant = dsl.ContainerOp(\n",
+    "            name='prun_float16_quant',\n",
+    "            image='khw2126/float16_quant:0.0.2',\n",
+    "            command=['python', '/app/float16_quant.py'],\n",
+    "            arguments=[\n",
+    "                \"--model_path\", model_path,\n",
+    "                \"--model_version\", model_version2,\n",
+    "                \"--model_version6\", model_version6,\n",
+    "            ],\n",
+    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
+    "            pvolumes={\"/result\": mnist.pvolume}\n",
+    "        )\n",
     "        ####################################################################################\n",
     "        \n",
     "        #result com\n",
@@ -243,6 +257,7 @@
     "        prun_dynamic_quan.after(prun)\n",
     "        quant_aware_dynamic_quan.after(quan_aware)\n",
     "        prun_integer_quant.after(prun)\n",
+    "        prun_float16_quant.after(prun)\n",
     "        \n",
     "        result.after(prun)\n",
     "        result.after(quan_aware)\n",
@@ -255,6 +270,7 @@
     "        result.after(prun_dynamic_quan)\n",
     "        result.after(quant_aware_dynamic_quan)\n",
     "        result.after(prun_integer_quant)\n",
+    "        result.after(prun_float16_quant)\n",
     "        \n",
     "    \n",
     "if __name__ == '__main__':\n",
