pruning and quantization aware and dynamic quantization pipeline add and comlete all pipeline

--- a/all_pipeline.ipynb
+++ b/all_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/02351a24-b838-40a1-bcf7-f9e3c4834399\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/29bb3de9-1901-4717-bc7e-808e896c7854\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -231,7 +231,22 @@
     "                \"--model_version6\", model_version6,\n",
     "            ],\n",
     "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
-    "            pvolumes={\"/result\": mnist.pvolume}\n",
+    "            pvolumes={\"/result\": prun.pvolume}\n",
+    "        )\n",
+    "        \n",
+    "        #prun and  quant_aware and dynamic_quan com\n",
+    "        prun_quant_aware_dynamic_quan = dsl.ContainerOp(\n",
+    "            name='prun_quant_aware_dynamic_quan',\n",
+    "            image='khw2126/quant_aware_tflite:0.0.5',\n",
+    "            command=['python', '/app/quantization_aware_tflite.py'],\n",
+    "            arguments=[\n",
+    "                \"--model_path\", model_path,\n",
+    "                \"--model_version\", model_version2,\n",
+    "                \"--model_version3\", model_version3,\n",
+    "                \"--model_version8\", model_version8,\n",
+    "            ],\n",
+    "            output_artifact_paths={'mlpipeline-metrics': '/mlpipeline-metrics.json'},\n",
+    "            pvolumes={\"/result\": quant_aware_dynamic_quan.pvolume}\n",
     "        )\n",
     "        ####################################################################################\n",
     "        \n",
@@ -258,6 +273,7 @@
     "        quant_aware_dynamic_quan.after(quan_aware)\n",
     "        prun_integer_quant.after(prun)\n",
     "        prun_float16_quant.after(prun)\n",
+    "        prun_quant_aware_dynamic_quan.after(quant_aware_dynamic_quan)\n",
     "        \n",
     "        result.after(prun)\n",
     "        result.after(quan_aware)\n",
@@ -271,6 +287,7 @@
     "        result.after(quant_aware_dynamic_quan)\n",
     "        result.after(prun_integer_quant)\n",
     "        result.after(prun_float16_quant)\n",
+    "        result.after(prun_quant_aware_dynamic_quan)\n",
     "        \n",
     "    \n",
     "if __name__ == '__main__':\n",
