edit some thing

--- a/mnist/all_pipeline.ipynb
+++ b/mnist/all_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/aa4c97a9-33ed-46cf-93f3-9a9072d54eb6\" target=\"_blank\" >here</a>"
+       "Run link <a href=\"/pipeline/#/runs/details/6a40bfbb-729d-4aee-b424-3e6abf69b4df\" target=\"_blank\" >here</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -66,7 +66,7 @@
     "        #base component\n",
     "        mnist = dsl.ContainerOp(\n",
     "            name='Train',\n",
-    "            image='khw2126/mnist-simple:5DD5D44A',\n",
+    "            image='khw2126/mnist-simple:B359DD41',\n",
     "            command=['python', '/app/Train.py'],\n",
     "            arguments=[\n",
     "                \"--learning_rate\", learning_rate,\n",
@@ -80,7 +80,7 @@
     "        #prun com\n",
     "        prun = dsl.ContainerOp(\n",
     "            name='prun',\n",
-    "            image='khw2126/prun:0.0.12',\n",
+    "            image='khw2126/prun:0.1.7', #:0.0.12\n",
     "            command=['python', '/app/pruning_code.py'],\n",
     "            arguments=[\n",
     "                \"--model_path\", model_path,\n",
@@ -94,7 +94,7 @@
     "        #quan aware com\n",
     "        quan_aware = dsl.ContainerOp(\n",
     "            name='quan_aware',\n",
-    "            image='khw2126/quan:0.0.9',\n",
+    "            image='khw2126/quan:0.0.16', #0.0.9\n",
     "            command=['python', '/app/quantization_aware_code.py'],\n",
     "            arguments=[\n",
     "                \"--model_path\", model_path,\n",
