--- a/mnist/compression_code/Train.ipynb
+++ b/mnist/compression_code/Train.ipynb
@@ -233,7 +233,7 @@
     "        parser.add_argument('--learning_rate', required=False, type=float, default=0.001)\n",
     "        parser.add_argument('--dropout_rate', required=False, type=float, default=0.3)  \n",
     "        parser.add_argument('--model_path', required=False, default='/result',type = str)  #/saved_model\n",
-    "        parser.add_argument('--model_version', required=False, default='/base_model.h5',type = str)#test2/Base_model.h5\n",
+    "        parser.add_argument('--model_version', required=False, default='/juyoung_pipeline_all/mnist/base_model.h5',type = str)#test2/Base_model.h5\n",
     "        args = parser.parse_args()\n",
     "\n",
     "\n",
